[tool.poetry]
name = "m-02-07"
version = "0.1.0"
description = ""
authors = ["Andrew <sideroalogo8@gmail.com>"]
readme = "README.md"
packages = [{include = "m_02_07"}]

[tool.poetry.dependencies]
python = "^3.11"
faker = "^19.3.0"
alembic = "^1.11.2"
aiosqlite = "^0.19.0"
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
